<resources>
    <string name="app_name">Pizzeria</string>
    <string name="txtViewBienvenida">Bienvenido/a a nuestra pizzería</string>
    <string name="txtViewUsuario">Usuario</string>
    <string name="txtInputUsuarioHint">Usuario</string>
    <string name="txtViewContrasena">Contraseña</string>
    <string name="txtPasswordContrasenaHint">Contraseña</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="txtInputUsuario"></string>
    <string name="txtPasswordContrasena"></string>
    <string name="btnRegistrarUsuario">Registrar usuario</string>
    <string name="txtViewCorreo">Correo electrónico</string>
    <string name="txtInputCorreoHint">Correo electrónico</string>
    <string name="txtInputCorreo"></string>
    <string name="txtInputUsuarioRegistrarse"></string>
    <string name="txtPasswordContrasenaRegistrarse"></string>
    <string name="txtViewMenuPrincipal">Menú principal</string>
    <string name="btnIrWeb">Ir a la web</string>
    <string name="btnIrPedido">Ir al pedido</string>
    <string name="btnConfiguracion">Configuración</string>
    <string name="txtViewConfiguracion">Configuración</string>
    <string name="btnGuardarConfiguracion">Guardar</string>
    <string name="switchFavorita">Favorita</string>
    <string name="btnPickColor">Seleccionar color</string>
    <string name="txtViewMenuPedido">Menú de pedido</string>
    <string name="btnPizzaFavorita">Pizza favorita</string>
    <string name="btnPersonalizada">Personalizada</string>
    <string name="btnPredeterminadas">Predeterminadas</string>
    <string name="btnVolverInicio">Volver a inicio</string>
    <string name="txtViewPizzasPredeterminadas">Pizzas predeterminadas</string>
    <string name="btnSeleccionarPizza">Seleccionar pizza</string>
    <string name="txtViewTamanoPizza">Tamaños</string>
    <string name="txtViewPizzas">Pizzas</string>
    <string name="txtViewConfirmacionPedido">Confirmación del pedido</string>
    <string name="txtViewPizzaSeleccionada">Pizza</string>
    <string name="txtViewPizzaSeleccionadaConfirmacion"></string>
    <string name="txtViewTamanoSeleccionado">Tamaño</string>
    <string name="txtViewTamanoSeleccionadoConfirmacion"></string>
    <string name="txtViewLblPrecio">Precio</string>
    <string name="txtViewPrecio"></string>
    <string name="btnConfirmarPedido">Confirmar pedido</string>
    <string name="RecordarSwitchMain">Mantener sesión iniciada</string>
    <string name="btnCerrarSesionConfig">Cerrar sesion\n</string>
    <string name="select_size">Select Size</string>
    <string name="select_3_ingredients">Select 3 Ingredients</string>
    <string name="confirm_selection">Confirm Selection</string>
</resources>