<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrarse"
            android:textAlignment="center"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txtViewCorreo"
                android:textAlignment="center"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtInputCorreoHint"
                    android:text="@string/txtInputCorreo" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtViewUsuario4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txtViewUsuario"
                android:textAlignment="center"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputUsuarioRegistrarse"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/txtInputUsuarioHint"
                    android:text="@string/txtInputUsuarioRegistrarse" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtViewContrasenaRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txtViewContrasena"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPasswordContrasenaRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/txtPasswordContrasenaHint"
                android:inputType="textPassword"
                android:text="@string/txtPasswordContrasenaRegistrarse" />

            <Button
                android:id="@+id/btnRegistrarUsuario"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btnRegistrarUsuario"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>