<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewBienvenida"
            android:textAlignment="center"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="clip_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/txtViewUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewUsuario"
                android:textAlignment="center"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/txtInputUsuarioHint"
                    android:text="@string/txtInputUsuario"
                    android:textColorHint="#546E7A"
                    tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtViewContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txtViewContrasena"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPasswordContrasena"
                style="@android:style/Widget.Holo.Light.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtPasswordContrasenaHint"
                android:inputType="textPassword"
                android:text="@string/txtPasswordContrasena"
                android:textColorHint="#546E7A"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

            <Switch
                android:id="@+id/switchRecordar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/RecordarSwitchMain"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

            <Button
                android:id="@+id/btnIniciarSesion"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:text="@string/btnIniciarSesion"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegistrarse"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btnRegistrarse"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>