<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionPedido">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewConfirmacionPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewConfirmacionPedido"
            android:textAlignment="center"
            android:textSize="48sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txtViewPizzaSeleccionada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txtViewPizzaSeleccionada"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtViewPizzaSeleccionadaConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewPizzaSeleccionadaConfirmacion"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txtViewTamanoSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txtViewTamanoSeleccionado"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtViewTamanoSeleccionadoConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewTamanoSeleccionadoConfirmacion"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txtViewLblPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txtViewLblPrecio"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtViewPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewPrecio"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnConfirmarPedido"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirmarPedido"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>