<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPedido">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtViewMenuPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewMenuPedido"
            android:textAlignment="center"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnPizzaFavorita"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btnPizzaFavorita"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnPersonalizada"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btnPersonalizada"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnPredeterminadas"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btnPredeterminadas"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnVolverInicio"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btnVolverInicio"
            android:textColorLink="#974444"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>