<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_size"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerSizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_3_ingredients"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/listViewIngredients"
            android:layout_width="match_parent"
            android:choiceMode="multipleChoice"
            android:minHeight="600dp" android:layout_height="600dp"/>

        <Button
            android:id="@+id/btnConfirmSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_selection"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>