<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewMenuPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewMenuPrincipal"
            android:textAlignment="center"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnIrWeb"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/btnIrWeb"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnIrPedido"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/btnIrPedido"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnConfiguracion"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:text="@string/btnConfiguracion"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>