<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaPizzasPredeterminadas">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewPizzasPredeterminadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewPizzasPredeterminadas"
            android:textAlignment="center"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txtViewPizzas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/txtViewPizzas"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/listViewPizzas"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:choiceMode="singleChoice" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txtViewTamanoPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/txtViewTamanoPizza"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/listViewTamanos"
            android:layout_width="match_parent"
            android:layout_height="256dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnSeleccionarPizza"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSeleccionarPizza"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>